<Text/> - revert alignment fix (#5790)

--- a/src/Text/Text.st.css
+++ b/src/Text/Text.st.css
@@ -165,7 +165,3 @@
   -webkit-mask-image: value(listIconSmallUrl);
   mask-image: value(listIconSmallUrl);
 }
-
-.root > * {
-  vertical-align: top;
-}
